k8s/employees-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusell-employees-deploy
  labels:
    app: rusell-employees
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rusell-employees
  template:
    metadata:
      labels:
        app: rusell-employees
    spec:
      containers:
        - name: rusell-employees
          image: cantte/rusell.employees-api:develop
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rusell-employees-service
spec:
  type: ClusterIP
  selector:
    app: rusell-employees
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: rusell-employees
    - port: 443
      targetPort: 443
      protocol: TCP
      name: rusell-employees-https
    - port: 300
      targetPort: 300
      protocol: TCP
      name: rusell-employees-grpc
