k8s/parcels-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusell-parcels-deploy
  labels:
    app: rusell-parcels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rusell-parcels
  template:
    metadata:
      labels:
        app: rusell-parcels
    spec:
      containers:
        - name: rusell-parcels
          image: cantte/rusell.parcels-api:develop
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rusell-parcels-service
spec:
  type: ClusterIP
  selector:
    app: rusell-parcels
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: rusell-parcels
    - port: 443
      targetPort: 443
      protocol: TCP
      name: rusell-parcels-https
