k8s/rabbitmq-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusell-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rusell-rabbitmq
  template:
    metadata:
      labels:
        app: rusell-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: mgmt-port
            - containerPort: 5672
              name: msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rusell-rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app: rusell-rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: mgmt-port
    - port: 5672
      targetPort: 5672
      name: msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rusell-rabbitmq-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: rusell-rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: mgmt-port
    - port: 5672
      targetPort: 5672
      name: msg-port
