k8s/routes-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusell-routes-deploy
  labels:
    app: rusell-routes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rusell-routes
  template:
    metadata:
      labels:
        app: rusell-routes
    spec:
      containers:
        - name: rusell-routes
          image: cantte/rusell.routes-api:develop
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rusell-routes-service
spec:
  type: ClusterIP
  selector:
    app: rusell-routes
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: rusell-routes
    - port: 443
      targetPort: 443
      protocol: TCP
      name: rusell-routes-https
